--- a/backend.yaml
+++ b/backend.yaml
@@ -1,20 +1,17 @@
 - name: configure backend server
-  become: yes
   hosts: backend
-  vars:
-    login_host: db.daws78.shop
-    login_password: ExpenseApp@1
+  become: yes
   tasks:
-  - name: disable default nodejs
+  - name: disable current nodejs
     ansible.builtin.command: dnf module disable nodejs -y
 
-  - name: enable nodejs:20
+  - name: enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
-    ansible.builtin.dnf: # only works for Redhat family
+    ansible.builtin.package:
       name: "{{ item }}"
-      state: installed
+      state: present
     loop:
     - nodejs
     - mysql
@@ -27,7 +24,7 @@
     ansible.builtin.file:
       path: /app
       state: directory
-
+  
   - name: download backend code
     ansible.builtin.get_url:
       url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
@@ -35,45 +32,39 @@
 
   - name: unzip backend code
     ansible.builtin.unarchive:
-      src: /tmp/backend.zip # by default checks in ansible server
+      src: /tmp/backend.zip
       dest: /app
       remote_src: yes
-
-  - name: install npm dependencies
-    ansible.builtin.command: npm install
-    args:
-      chdir: /app
+  
+  - name: Install dependencies
+    community.general.npm:
+      path: /app
 
   - name: copy backend service
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
 
-  - name: install python mysql dependencies
-    ansible.builtin.pip: 
-      name:
-      - PyMySQL # to connect MySQL DB from Ansible
-      - cryptography
-      executable: pip3.9 # pip3.11 if python version is 3.11
+  - name: install python libs
+    ansible.builtin.pip:
+      name: "{{ item }}"
+      executable: pip3.9
+    loop:
+    - cryptography
+    - PyMySQL
 
-  - name: import data into mysql
+  - name: import mysql data
     community.mysql.mysql_db:
-      login_user: root
-      login_password: "{{ login_password }}"
-      login_host: "{{ login_host }}"
-      target: /app/schema/backend.sql
       state: import
       name: all
+      login_user: root
+      login_password: ExpenseApp@1
+      login_host: mysql.daws78.shop
+      target: /app/schema/backend.sql
 
-  - name: daemon reload
+  - name: daemon reload and restart service
     ansible.builtin.systemd_service:
+      enabled: true
+      state: restarted
       daemon_reload: true
-
-  - name: start and enable backend service
-    ansible.builtin.service:
       name: backend
-      state: started
-      enabled: yes
-
-      
-  
