--- a/frontend.yaml
+++ b/frontend.yaml
@@ -1,19 +1,19 @@
 - name: configure frontend server
-  become: yes
   hosts: frontend
+  become: yes
   tasks:
   - name: install nginx server
     ansible.builtin.dnf:
       name: nginx
-      state: latest
-  
-  - name: start and enable nginx
+      state: installed
+
+  - name: enable and start nginx
     ansible.builtin.service:
       name: nginx
       state: started
       enabled: yes
 
-  - name: delete default website
+  - name: delete html directory
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: absent
@@ -23,18 +23,23 @@
       path: /usr/share/nginx/html
       state: directory
 
-  - name: download and extract frontend code
+  - name: download frontend code
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      dest: /tmp/frontend.zip
+
+  - name: unzip frontend code
     ansible.builtin.unarchive:
-      src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      src: /tmp/frontend.zip
       dest: /usr/share/nginx/html
       remote_src: yes
 
-  - name: copy backend conf
+  - name: copy expense config
     ansible.builtin.copy:
       src: expense.conf
       dest: /etc/nginx/default.d/expense.conf
 
   - name: restart nginx
     ansible.builtin.service:
-      name: nginx
       state: restarted
+      name: nginx
